# ali-api

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  ARCHITECTURE.md  DEPLOY-GCP.md  DEPLOY.md  Dockerfile  Dockerfile.new  ENVIRONMENT_CONFIG.md  FIREBASE_SETUP.md  FRONTEND_INTEGRATION.md  MIGRATION_STATUS.md  README-DOCKER.md  README.md  TROUBLESHOOTING.md  cloudbuild.yaml  diagnose.py  docker-build.sh  docker-compose-up.sh  docker-compose.postgres.yml  docker-compose.yml  docker-run.sh  docker-test.sh  firebase-credentials.json.example  fix_critical_issues.py  production_diagnosis_20250804_223351.md  production_test_report_20250812_190625.json  production_test_report_20250812_190840.json  production_test_report_20250812_190949.json  production_test_report_20250812_191135.json  production_test_report_20250812_191242.json  production_test_report_20250812_191339.json  production_test_report_20250812_191439.json  production_test_report_20250812_192229.json  pyproject.toml  pytest.ini  requirements.txt  setup_dev.py  (+3 more)
.github/workflows/: deploy-production.yml  deploy-staging.yml
.vercel/: project.json
alembic/: env.py
alembic/versions/: 001_create_initial_tables.py  21582096e6c1_primeira.py
app/: __init__.py  deep_health.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  auth.py  chatbot.py  dashboard.py  documents.py  firebase_auth.py  rag.py  users.py  whatsapp.py
app/constants/: __init__.py  database.py  validation.py
app/core/: __init__.py  config.py  dependencies.py  firebase.py  logging.py  metrics.py  middleware.py
app/core/agno/: __init__.py  graph.py  improved_agent.py
app/core/agno/tools/: __init__.py  duckduckgo_search.py  rag_search.py  whatsapp_tool.py
app/domain/: __init__.py  exceptions.py
app/domain/entities/: __init__.py  document_entity.py  message_entity.py  session_entity.py  user_entity.py
app/domain/repositories/: __init__.py  document_repository.py  message_repository.py  session_repository.py  user_repository.py
app/domain/services/: __init__.py  document_service.py  message_service.py  session_service.py  user_service.py
app/exceptions/: __init__.py  api.py  auth.py  database.py  validation.py
app/infrastructure/: __init__.py  container.py
app/infrastructure/database/: __init__.py  document_repository.py  message_repository.py  session_repository.py  user_repository.py
app/infrastructure/firestore/: __init__.py  base_repository.py  document_repository.py  message_repository.py  session_repository.py  user_repository.py
app/infrastructure/messaging/: __init__.py
app/models/: __init__.py  chat.py  rag.py  session.py  user.py  user_activity.py
app/schemas/: __init__.py  agno.py  auth.py  chat.py  dashboard.py  documents.py  graph.py  rag.py  users.py
app/services/: __init__.py  cloud_storage.py  dashboard_service.py  database.py  document_processor.py  documents_service.py  firebase_auth.py  message_service.py  rag.py  users_service.py
app/services/whatsapp/: __init__.py  client.py
app/shared/: __init__.py
app/shared/constants/: __init__.py  auth.py  http.py  validation.py
app/shared/exceptions/: api.py  auth.py  database.py  validation.py
app/shared/middleware/: __init__.py  error_handler.py  firebase_auth.py  request_logging.py
app/shared/response_models/: __init__.py  base.py
app/shared/utils/: auth.py  graph.py  sanitization.py
app/utils/: auth.py  sanitization.py
data/: agno_memory.db
docs/: ARCHITECTURE.md  DOCKER_SETUP.md  FIREBASE_SETUP.md  FRONTEND_INTEGRATION.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  MIGRATION_STATUS.md  PRODUCTION_TODO.md  TROUBLESHOOTING.md  WHATSAPP_SETUP.md
evals/: evaluator.py  helpers.py  main.py
evals/metrics/: __init__.py
logs/: development-2025-07-13.jsonl  development-2025-07-14.jsonl  development-2025-07-23.jsonl
scripts/: cleanup-for-production.sh  create-gcp-secrets.sh  deploy-production.sh  docker-dev.sh  init-db.sql  init_database.sh  setup-evolution-secrets.sh  setup-gcp.sh  setup-monitoring.sh  setup_evolution.py  setup_evolution.sh  setup_postgres.sh  setup_qdrant.py  setup_whatsapp.py  test_elasticsearch_agua_clara.py  test_legislative_document.py
scripts/migration/: migrate_to_firebase.py  rollback_migration.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_auth.py  test_database.py  test_health.py  test_rag.py  test_rag.py.backup
tests/integration/: test_db_integration.py  test_elasticsearch.py
tests/mocks/: __init__.py
tmp/: agent.db
